--- a/nemu/Makefile.git
+++ b/nemu/Makefile.git
@@ -3,7 +3,7 @@ STUNAME = 廖泽涛
 
 # DO NOT modify the following code!!!
 
-GITFLAGS = -q --author='tracer-ics2020 <tracer@njuics.org>' --no-verify --allow-empty
+GITFLAGS = -q --author='tracer-ics2021 <110713610@qq.com>' --no-verify --allow-empty
 
 # prototype: git_commit(msg)
 define git_commit
