--- a/am-kernels/tests/cpu-tests/Makefile
+++ b/am-kernels/tests/cpu-tests/Makefile
@@ -10,7 +10,7 @@ $(ALL): %: Makefile.%
 Makefile.%: tests/%.c latest
 	@/bin/echo -e "NAME = $*\nSRCS = $<\nLIBS += klib\ninclude $${AM_HOME}/Makefile" > $@
 	-@make -s -f $@ ARCH=$(ARCH) $(MAKECMDGOALS)
-	-@rm -f Makefile.$*
+	#-@rm -f Makefile.$*
 
 # cancel rules included by $(AM_HOME)/Makefile.check
 image: ;
