--- a/am-kernels/tests/cpu-tests/Makefile
+++ b/am-kernels/tests/cpu-tests/Makefile
@@ -11,7 +11,7 @@ Makefile.%: tests/%.c latest
 	@/bin/echo -e "NAME = $*\nSRCS = $<\nLIBS += klib\ninclude $${AM_HOME}/Makefile" > $@
 	#-@make -s -f $@ ARCH=$(ARCH) $(MAKECMDGOALS)
 	-@make -f $@ ARCH=$(ARCH) $(MAKECMDGOALS)
-	#-@rm -f Makefile.$*
+	-@rm -f Makefile.$*
 
 # cancel rules included by $(AM_HOME)/Makefile.check
 image: ;
